--- a/ColorGame.html
+++ b/ColorGame.html
@@ -22,7 +22,14 @@
     <div class="square"></div>
     <div class="square"></div>
 </div>
-
+<div>
+    <footer>
+        <div class="footer-links">
+            <a href="https://github.com/clarkjesse"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/jesse-clark/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        </div>
+    </footer>
+</div>
 <!--JavaScript-->
 <script src="ColorGame.js"></script>
 </body>
