--- a/ColorGame.html
+++ b/ColorGame.html
@@ -3,34 +3,43 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <!--Font Awesome-->
+    <script src="https://use.fontawesome.com/917cf05e3e.js"></script>
+    <!--CSS-->
     <link rel="stylesheet" type="text/css" href="ColorGame.css"/>
     <title>Color Game</title>
 </head>
-<body>
-<h1>The Great<br/><span id="colorDisplay">RGB</span><br/>Color Game</h1>
-<div id="stripe">
-    <button id="reset">New Colors</button>
-    <span id="message"></span>
-    <button class="mode">Easy</button>
-    <button class="mode selected">Hard</button>
-</div>
-<div class="container">
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-</div>
-<div>
-    <footer>
-        <div class="footer-links">
-            <a href="https://github.com/clarkjesse"><i class="fa fa-github" aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/in/jesse-clark/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    <body>
+        <div class="page-container">
+        <div>
+            <h1>The Great<br/><span id="colorDisplay">RGB</span><br/>Color Game
+            </h1>
+            <div id="stripe">
+                <button id="reset">New Colors</button>
+                <span id="message"></span>
+                <button class="mode">Easy</button>
+                <button class="mode selected">Hard</button>
+            </div>
+            <div class="container">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
         </div>
-    </footer>
-</div>
-<!--JavaScript-->
-<script src="ColorGame.js"></script>
-</body>
+            </div>
+        <div class="footer">
+            <footer>
+                <div class="footer-links">
+                    <a href="" #><i class="fa fa-gamepad" aria-hidden="true"></i></a>
+                    <a href="https://github.com/clarkjesse"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/jesse-clark/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    </div>
+            </footer>
+        </div>
+        <!--JavaScript-->
+        <script src="ColorGame.js"></script>
+    </body>
 </html>
