--- a/ColorGame.html
+++ b/ColorGame.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Font Awesome-->
     <script src="https://use.fontawesome.com/917cf05e3e.js"></script>
     <!--CSS-->
